--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
             <version>2.2.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>15.0</version>
+        </dependency>
+
+
 
         <!-- Logging -->
         <dependency>
